#===========================================================================
#
#   configure.in 
#
#===========================================================================
# $Id: configure.in,v 1.32 2006/06/01 09:50:12 chris Exp $

#---------------------------------------------------------------------------
#   Init Auto Tools
#---------------------------------------------------------------------------

# autoconf

AC_INIT(src/graph.cpp)
AC_CONFIG_AUX_DIR(config)

dnl -----------------------------------------------
dnl Package name and version number (user defined)
dnl -----------------------------------------------

GENERIC_LIBRARY_NAME=GTL

#release versioning
GENERIC_MAJOR_VERSION=1
GENERIC_MINOR_VERSION=2
GENERIC_MICRO_VERSION=4

#shared library versioning
GENERIC_LIBRARY_VERSION=3:4:2
#                       | | |
#                +------+ | +---+
#                |        |     |
#             current:revision:age
#                |        |     |
#                |        |     +- increment if interfaces have been added
#                |        |        set to zero if interfaces have been removed
#                                  or changed
#                |        +- increment if source code has changed
#                |           set to zero if current is incremented
#                +- increment if interfaces have been added, removed or changed


dnl --------------------------------
dnl Package name and version number
dnl --------------------------------

AC_SUBST(GENERIC_LIBRARY_VERSION)

PACKAGE=$GENERIC_LIBRARY_NAME
AC_SUBST(GENERIC_LIBRARY_NAME)

GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
GENERIC_RELEASE=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION
AC_SUBST(GENERIC_RELEASE)
AC_SUBST(GENERIC_VERSION)

AC_DEFINE_UNQUOTED(GENERIC_MAJOR_VERSION, $GENERIC_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(GENERIC_MINOR_VERSION, $GENERIC_MINOR_VERSION)
AC_DEFINE_UNQUOTED(GENERIC_MICRO_VERSION, $GENERIC_MICRO_VERSION)

VERSION=$GENERIC_VERSION

# automake

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

# libtool

AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

LIBTOOL="$LIBTOOL --silent"

#---------------------------------------------------------------------------
#   Documentation utilites
#---------------------------------------------------------------------------

AC_CHECK_PROGS(doxygen, doxygen)

#---------------------------------------------------------------------------
#   generate Files
#---------------------------------------------------------------------------

### AC_OUTPUT BEGIN ###
#
# this section is generated automatically by Makefile.local
# DO NOT MODIFY !!
#
AC_OUTPUT( \
  doc/Makefile \
  doc/userguide/Makefile \
  include/GTL/Makefile \
  include/GTL/version.h \
  include/Makefile \
  Makefile \
  src/Makefile \
  tests/Makefile \
)
### AC_OUTPUT END ###

#---------------------------------------------------------------------------
#   end of file
#---------------------------------------------------------------------------
