#===========================================================================
#
#   doc/latex/Makefile.am
#
#===========================================================================
# $Id: Makefile.am,v 1.1 2002/11/08 11:56:34 raitner Exp $

#---------------------------------------------------------------------------
#   Files
#---------------------------------------------------------------------------


CLEANFILES = $(PACKAGE) *.aux $(PACKAGE).dvi \
	*.idx *.log *.toc *.ind *.ilg

DISTCLEANFILES = $(PACKAGE).ps

#---------------------------------------------------------------------------
#   Targets
#---------------------------------------------------------------------------

.PHONY: doc
doc:	$(PACKAGE).ps 

#---------------------------------------------------------------------------
#   Rules
#---------------------------------------------------------------------------

%.dvi: %.tex %.cls
	TEXINPUTS=$(srcdir):: latex $<
	makeindex $(@:.dvi=.idx)
	TEXINPUTS=$(srcdir):: latex $<

%.ps: %.dvi
	dvips -o $@ $<

dist-hook: $(PACKAGE).ps
	cp $(PACKAGE).ps $(distdir)

#---------------------------------------------------------------------------
#   end of file
#---------------------------------------------------------------------------
